idf_component_register(SRCS 
                            "cleytin_engine.cpp"
                            "cleytin_engine_utils.cpp"
                            "ce_engine_graphic_object.cpp"
                            "ce_engine_render_window.cpp"
                            "ce_engine_point.cpp"
                            "ce_engine_line.cpp"
                            "cleytin_tftlcd_api.cpp"
                            "cleytin_controls.cpp"
                            "ce_rectangle.cpp"
                            "ce_circle.cpp"
                            "ce_bitmap.cpp"
                            "ce_font.cpp"
                            "ce_8x12_font.cpp"
                            "ce_text.cpp"
                            "ce_container.cpp"
                            "ce_menu_helper.cpp"
                            "ce_canvas.cpp"
                            "ce_canvas_tftlcd_320x240.cpp"
                            "cleytin_sdcard.cpp"
                            "ce_colorful_bitmap.cpp"
                            "ce_move_controls.cpp"
                            "animations/ce_animation.cpp"
                            "animations/ce_linear_move_animation.cpp"
                            "animations/ce_color_bitmap_sprite_animation.cpp"
                    INCLUDE_DIRS "include" "include/animations"
                    REQUIRES cleytin_commons)